# python-ci-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
postscript_interpreter/: __init__.py  interpreter.py  lexer.py  parser.py
postscript_interpreter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_app.py  test_interpreter.py
